# swaggy

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: cli.rs  consts.rs  error.rs  executable.rs  lib.rs  main.rs  processor.rs
src/commands/: build.rs  serve.rs
src/idl_loader/: error.rs  idl.rs  loaded_idl.rs  mod.rs
src/idl_processor/: mod.rs  variant_info.rs
swagger/: swagger.html
